Add new li item again

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 					<li><a href="">About</a></li>
 					<li><a href="">Help</a></li>
 					<li><a href="#">Help 2</a></li>
+					<li>testing</li>
 				</ul>
 				<ul class="header__nav__2">
 					<li><a href="">Favourite</a></li>
